renmaed index folderr to pages for better remsmr kaya amwene

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="welcome-message">GEORGE HUSSEIN</h1>
         </div>
         <div class="header-right">
-            <a href="./index/settings.html" class="icon-style_header profile-icon" title="Settings">
+            <a href="./pages/settings.html" class="icon-style_header profile-icon" title="Settings">
                 <i class="fa-solid fa-user"></i>
             </a>
             <a href="#" class="icon-style_header notification-icon">
@@ -26,9 +26,9 @@
                 <i class="fa-solid fa-bars"></i>
                 <div class="notification-dropdown">
                     <ul>
-                        <li><a href="./index/notification.html">Notification 1</a></li>
-                        <li><a href="./index/notification.html">Notification 2</a></li>
-                        <li><a href="./index/notification.html">Notification 3</a></li>
+                        <li><a href="./pages/notification.html">Notification 1</a></li>
+                        <li><a href="./pages/notification.html">Notification 2</a></li>
+                        <li><a href="./pages/notification.html">Notification 3</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,11 +39,11 @@
         <!-- Taskbar Navigation -->
         <nav class="taskbar" id="taskbar">
             <ul>
-                <li><a href="./index.html" class="active"><i class="fa-solid fa-home"></i>Home</a></li>
-                <li><a href="./index/portfolio.html"><i class="fa-solid fa-chart-line"></i>Portfolio</a></li>
-                <li><a href="./index/market.html"><i class="fa-solid fa-chart-bar"></i>Market</a></li>
-                <li><a href="./index/settings.html"><i class="fa-solid fa-cogs"></i>Settings</a></li>
-                <li><a href="./index/logout.html"><i class="fa-solid fa-sign-out"></i>Logout</a></li>
+                <li><a href="./pages.html" class="active"><i class="fa-solid fa-home"></i>Home</a></li>
+                <li><a href="./pages/portfolio.html"><i class="fa-solid fa-chart-line"></i>Portfolio</a></li>
+                <li><a href="./pages/market.html"><i class="fa-solid fa-chart-bar"></i>Market</a></li>
+                <li><a href="./pages/settings.html"><i class="fa-solid fa-cogs"></i>Settings</a></li>
+                <li><a href="./pages/logout.html"><i class="fa-solid fa-sign-out"></i>Logout</a></li>
             </ul>
         </nav>
         <div class="main-content">
@@ -54,11 +54,11 @@
                     <h2>Total Balance</h2>
                     <p id="total-balance">$0.00</p>
                     <div class="balance-actions">
-                        <button onclick="window.location.href='./index/add-funds.html'" data-tooltip="Add money to your account">
+                        <button onclick="window.location.href='./pages/add-funds.html'" data-tooltip="Add money to your account">
                             <i class="fa-solid fa-plus"></i>
                             <span>Add Funds</span>
                         </button>
-                        <button onclick="window.location.href='./index/withdraw-funds.html'" data-tooltip="Withdraw funds to your bank account">
+                        <button onclick="window.location.href='./pages/withdraw-funds.html'" data-tooltip="Withdraw funds to your bank account">
                             <i class="fa-solid fa-arrow-right-from-bracket"></i>
                             <span>Withdraw</span>
                         </button>
@@ -100,7 +100,7 @@
                 <ul id="transactions-list">
                     <!-- Transactions will be dynamically generated here -->
                 </ul>
-                <button class="view-all" onclick="location.href='./index/transaction-history.html'">View All Transactions</button>
+                <button class="view-all" onclick="window.location.href='./pages/transaction-history.html'">View All Transactions</button>
             </section>
 
             <!-- Financial Insights -->
