spme code refactoring and startting of the new and scallabele code base .. basically we building again and we start a fresh

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
                 <li><a href="./pages/logout.html"><i class="fa-solid fa-sign-out"></i>Logout</a></li>
             </ul>
         </nav>
+
+        <!-----    END OF HEADER CONTENT AND START OF MAIN CONTENT    ------>
         <div class="main-content">
             <!-- Financial Access Container -->
             <section class="financial-access">
                 <!-- Balance Widget -->
-                <div class="tile balance-tile">
+                <div class="balance-tile">
                     <h2>Total Balance</h2>
                     <p id="total-balance">$0.00</p>
                     <div class="balance-actions">
