now the main-conent the umbrella of quick access is doen fo now will revisit afetr georg's approaval but so far so good

--- a/new-home.html
+++ b/new-home.html
@@ -34,7 +34,9 @@
         </div>     
     <div class="main-content"> 
 
-
+        <section class="quick-access" id="quick-access-tiles">
+           
+        </section>
 
     </div>
         <script type="module" src="./scripts/data/index.js"></script>
