--- a/new-home.html
+++ b/new-home.html
@@ -41,5 +41,4 @@
     </div>
         <script type="module" src="./scripts/data/index.js"></script>
         <script src="./scripts/main.js"></script>
-       <!-- <script src="./scripts/dynamic-content.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script> --->
+       <!-- <script src="./scripts/dynamic-content.js"></script> --->
