--- a/new-home.html
+++ b/new-home.html
@@ -38,6 +38,13 @@
            
         </section>
 
+        <section class="transactions-overview">
+            <h2>Recent Transactions</h2>
+            <ul id="transactions-list">
+                
+            </ul>
+            <button class="view-all" onclick="window.location.href='./pages/transaction-history.html'">View All Transactions</button>
+        </section>
     </div>
         <script type="module" src="./scripts/data/index.js"></script>
         <script src="./scripts/main.js"></script>
