just adding the fa librrary for offline shit dev

--- a/pages/add-funds.html
+++ b/pages/add-funds.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Funds</title>
     <link rel="stylesheet" href="../css/add-funds.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <div class="add-funds-container">
