--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,6 +6,7 @@
   <title>Website with Sidebar Toggle</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+  <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 <body>
   <header class="header">
     <div class="icon-style_header profile-icon"><a href="#" id="open-button"><i class="fa-solid fa-user"></i></a></div>
