--- a/pages/send-money.html
+++ b/pages/send-money.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Send Money</title>
     <link rel="stylesheet" href="../css/send-money.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <div class="send-money-container">
