--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>User Dashboard</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" href="./fontawesome-free-6.6.0-web/css/all.css">
     <link rel="manifest" href="./manifest.json">
 </head>
 <body>
