--- a/pages/notification.html
+++ b/pages/notification.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MasterKey | Notification</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <div class="notification-content">
