--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Settings</title>
     <link rel="stylesheet" href="../css/settings.css"> <!-- Link to settings.css -->
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <div class="settings-container">
