--- a/pages/transaction-history.html
+++ b/pages/transaction-history.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/transaction-history.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <header>
