--- a/pages/withdraw-funds.html
+++ b/pages/withdraw-funds.html
@@ -6,6 +6,7 @@
     <title>Withdraw Funds</title>
     <link rel="stylesheet" href="../css/withdraw-funds.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.css">
 </head>
 <body>
     <div class="withdraw-page">
