--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <section class="financial-access">
         <div class="tile balance-tile">
             <h2>Total Balance</h2>
-            <p id="total-balance">$0.00</p>     
+            <p id="total-balance">90.00</p>     
         </div>
         
     </section>
